--- a/app/views/members/_form.html.erb
+++ b/app/views/members/_form.html.erb
@@ -20,6 +20,18 @@
     <%= f.text_field :password %>
   </div>
   <div class="field">
+      <%= f.label :password_salt %><br>
+      <%= f.text_field :password_salt %>
+  </div>
+    <div class="field">
+      <%= f.label :birthdate %><br>
+      <%= f.text_field :birthdate %>
+    </div>
+    <div class="field">
+  <%= f.label :cellphone %><br>
+  <%= f.text_field :cellphone %>
+</div>
+  <div class="field">
     <%= f.label :fname %><br>
     <%= f.text_area :fname %>
   </div>
