--- a/app/views/general/index.html.haml
+++ b/app/views/general/index.html.haml
@@ -10,7 +10,8 @@
     %script{:type=>"text/javascript"}
       alert("Login success");
   - if flash["login_error"]
-    = flash["login_error"]
+    %script{:type=>"text/javascript"}
+      alert("Login error");
   #conteiner
     #branding
       #branding-content
