--- a/app/views/admin/cars.html.haml
+++ b/app/views/admin/cars.html.haml
@@ -1,170 +1,38 @@
-#wrapper
-  / Sidebar
-  %nav.navbar.navbar-inverse.navbar-fixed-top{:role => "navigation"}
-    / Brand and toggle get grouped for better mobile display
-    .navbar-header
-      %button.navbar-toggle{"data-target" => ".navbar-ex1-collapse", "data-toggle" => "collapse", :type => "button"}
-        %span.sr-only Toggle navigation
-        %span.icon-bar
-        %span.icon-bar
-        %span.icon-bar
-      %a.navbar-brand{:href => "index.php"} Rent A Car Control Panel1
-    / Collect the nav links, forms, and other content for toggling
-    .collapse.navbar-collapse.navbar-ex1-collapse
-      %ul.nav.navbar-nav.side-nav
-        %li
-          %a{:href => "index.php"}
-            %i.fa.fa-dashboard
-            Dashboard
-        %li
-          %a{:href => "members.php"}
-            %i.fa.fa-user
-            Members
-            %link_to 'Add Car', '/admin/addCar'
-        %li.active
-          %a{:href => "cars.php"}
-            %i.fa.fa-car
-            Cars
-        %li
-          %a{:href => "rentals.php"}
-            %i.fa.fa-tasks
-            Rentals
-        %li
-          %a{:href => "options.php"}
-            %i.fa.fa-edit
-            Options
-      %ul.nav.navbar-nav.navbar-right.navbar-user
-        %li.dropdown.user-dropdown
-          %a.dropdown-toggle{"data-toggle" => "dropdown", :href => "#"}
-            %i.fa.fa-user
-            Burak1 Çolak1
-            %b.caret
-          %ul.dropdown-menu
-            %li
-              %a{:href => "..", :target => "_blank"}
-                %i.fa.fa-home
-                Home
-            %li.divider
-            %li
-              %a{:href => "options.php"}
-                %i.fa.fa-gear
-                Options
-            %li.divider
-            %li
-              %a{:href => "logout.php"}
-                %i.fa.fa-power-off
-                Log Out
-  / /.navbar-collapse
-  #page-wrapper
-    .row
-      .col-lg-12
-        %h1
-          Cars
-          %small
-        .alert.alert-info.alert-dismissable
-          %button.close{"aria-hidden" => "true", "data-dismiss" => "alert", :type => "button"} &times;
-          Welcome to Cars Page
-    / /.row
-    .row
-      .col-lg-3
-        %h3 Add Car
-        %form{:action => "", :method => "post", :role => "form"}
-          .form-group
-            %label Image URL
-            %input.form-control{:name => "car_url", :placeholder => "Enter URL"}/
-          .form-group
-            %label Daily Price
-            %input.form-control{:name => "car_price", :placeholder => "Enter Daily Price"}/
-          .form-group
-            %label Car Stock
-            %input.form-control{:name => "car_stock", :placeholder => "Enter Stock Information"}/
-          .form-group
-            %label Title
-            %input.form-control{:name => "car_title", :placeholder => "Enter Title"}/
-          .form-group
-            %label Make
-            %input.form-control{:name => "car_make", :placeholder => "Enter Make"}/
-          .form-group
-            %label Model
-            %input.form-control{:name => "car_model", :placeholder => "Enter Model"}/
-          .form-group
-            %label Year
-            %input.form-control{:name => "car_year", :placeholder => "Enter Year"}/
-          .form-group
-            %label Color
-            %input.form-control{:name => "car_color", :placeholder => "Enter Color"}/
-          .form-group
-            %label Fuel
-            %select.form-control{:name => "car_fuel"}
-              %option{:value => "Diesel"} Diesel
-              %option{:value => "Gasoline"} Gasoline
-              %option{:value => "Hybrid"} Hybrid
-              %option{:value => "LPG"} LPG
-          / <input class="form-control" name="car_fuel" placeholder="Enter Fuel"/>
-          .form-group
-            %label HP
-            %input.form-control{:name => "car_hp", :placeholder => "Enter HP"}/
-          %input{:name => "reloadCheck", :type => "hidden", :value => "1"}/
-          %button.btn.btn-default{:name => "submit", :type => "submit"} Submit
-      .col-lg-3
-        %h3 Change Car
-        %form{:action => "", :method => "post", :role => "form"}
-          .form-group
-            %label ID
-            %input.form-control{:name => "car_id", :placeholder => "Enter ID"}/
-          .form-group
-            %label Image URL
-            %input.form-control{:name => "car_url2", :placeholder => "Enter URL"}/
-          .form-group
-            %label Daily Price
-            %input.form-control{:name => "car_price2", :placeholder => "Enter Daily Price"}/
-          .form-group
-            %label Title
-            %input.form-control{:name => "car_title2", :placeholder => "Enter Title"}/
-          .form-group
-            %label Make
-            %input.form-control{:name => "car_make2", :placeholder => "Enter Make"}/
-          .form-group
-            %label Model
-            %input.form-control{:name => "car_model2", :placeholder => "Enter Model"}/
-          .form-group
-            %label Year
-            %input.form-control{:name => "car_year2", :placeholder => "Enter Year"}/
-          .form-group
-            %label Color
-            %input.form-control{:name => "car_color2", :placeholder => "Enter Color"}/
-          .form-group
-            %label Fuel
-            %select.form-control{:name => "car_fuel2"}
-              %option{:value => "Diesel"} Diesel
-              %option{:value => "Gasoline"} Gasoline
-              %option{:value => "Hybrid"} Hybrid
-              %option{:value => "LPG"} LPG
-          .form-group
-            %label HP
-            %input.form-control{:name => "car_hp2", :placeholder => "Enter HP"}/
-          %button.btn.btn-default{:name => "submit2", :type => "submit"} Submit
-      .col-lg-6
-        %h3 All Cars
-        .results
-        %button#1-page.btn.btn-default.btn-xs.paginate_click 1
-        %button#2-page.btn.btn-default.btn-xs.paginate_click 2
-        %p.clear/
-        %h3 Change Stock Information
-        %form{:action => "", :method => "post", :role => "form"}
-          .form-group
-            %label ID
-            %input.form-control{:name => "car_id2", :placeholder => "Enter ID"}/
-          .form-group
-            %label Stock
-            %input.form-control{:name => "car_stock2", :placeholder => "Enter Stock"}/
-          %button.btn.btn-default{:name => "submit3", :type => "submit"} Submit
-        %h3 Delete Car
-        %form{:action => "", :method => "post", :role => "form"}
-          .form-group
-            %label ID
-            %input.form-control{:name => "car_id3", :placeholder => "Enter ID"}/
-          %button.btn.btn-default{:name => "submit4", :type => "submit"} Delete
-            / /.row
-            / /#page-wrapper
-            / /#wrapper
+=render "common"
+#page-wrapper
+  .row
+    .col-lg-12
+      %h1
+        Cars
+      .alert.alert-info.alert-dismissable
+        %button.close{"aria-hidden" => "true", "data-dismiss" => "alert", :type => "button"} &times;
+        Welcome to Cars Page
+  .row
+    .col-lg-12
+      %h3 All Cars
+      %table.table.table-bordered.table-hover.tablesorter
+        %thead
+          %tr
+            %th ID
+            %th Title
+            %th Make
+            %th Model
+            %th Year
+            %th Color
+            %th Fuel
+            %th Hp
+            %th Price
+            %th Stock
+        %tbody
+          %tr.popimg{"data-img" => "http://www.burakcolak.com.tr/rentacar/images/maxima.png", "data-original-title" => "", :rel => "popover", :title => ""}
+            %td 8
+            %td Nissan
+            %td Nissan
+            %td Maxima
+            %td 2013
+            %td Silver
+            %td Diesel
+            %td 240
+            %td 45
+            %td 0
+  %p.clear
