commit for admin panel

--- a/app/views/admin/_common.html.haml
+++ b/app/views/admin/_common.html.haml
@@ -19,9 +19,9 @@
           %i{:class=>"fa fa-fw fa-caret-down"}
         %ul{:id => "members", :class=>"collapse"}
           %li
-            %a{:href=>"/admin/changeMember"} Change Member
+            %a{:href=>"/admin/members"} View Members
           %li
-            %a{:href=>"/admin/updateMember"} Update Member
+            %a{:href=>"/admin/changeMember"} Change Member
           %li
             %a{:href=>"/admin/deleteMember"} Delete Member
       %li
