commit for admin panel

--- a/app/views/admin/_common.html.haml
+++ b/app/views/admin/_common.html.haml
@@ -45,7 +45,7 @@
           %i.fa.fa-tasks
           Rentals
       %li
-        %a{:href => "options.php"}
+        %a{:href => "/admin/options"}
           %i.fa.fa-edit
           Options
     %ul.nav.navbar-nav.navbar-right.navbar-user
