--- a/app/views/admin/change_car.html.haml
+++ b/app/views/admin/change_car.html.haml
@@ -18,7 +18,7 @@
           %input.form-control{:name => "car_id", :placeholder => "Enter ID"}
         .form-group
           %label Image URL
-          %input.form-control{:name => "car[url]", :placeholder => "Enter URL"}
+          %input.form-control{:name => "car[image]", :placeholder => "Enter URL"}
         .form-group
           %label Daily Price
           %input.form-control{:name => "car[price]", :placeholder => "Enter Daily Price"}
