--- a/app/views/admin/rentals.html.haml
+++ b/app/views/admin/rentals.html.haml
@@ -25,6 +25,6 @@
               %td
                 =rental_obj.location
               %td
-                =member_obj.pickupdate
+                =rental_obj.pickupdate
               %td
-                =member_obj.dropoffdate
+                =rental_obj.dropoffdate
