--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -34,3 +34,4 @@ input.continue_button.grey_button:hover{background:url("/assets/arrow-2.png") no
 .ui-datepicker-next{background:url("/assets/next.png") no-repeat!important;}
 div#ui-datepicker-div{z-index:2000!important;}
 #selection-info li{padding: 0 0 15px 0;}
+.expiration_date_year ul{max-height: 2000px!important;}
