--- a/app/views/general/index.html.haml
+++ b/app/views/general/index.html.haml
@@ -1,242 +1,118 @@
-%head
-  %title
-    = get_title
-  %meta{:charset => "utf-8"}
-  %meta{:name => "viewport" , :content => "width=device-width, initial-scale=1"}
-  = stylesheet_link_tag    'general', media: 'all', 'data-turbolinks-track' => true
-  = csrf_meta_tags
 %body.center-slider.one-column.middle-sidebar
   - if flash["login_success"]
     %script{:type=>"text/javascript"}
       alert("Login success");
+  - if flash["payment_success"]
+    %script{:type=>"text/javascript"}
+      alert("Payment operation success");
   - if flash["login_error"]
     %script{:type=>"text/javascript"}
       alert("Login error");
   - if flash["empty_error"]
     %script{:type=>"text/javascript"}
       alert("All fields must be filled");
-  #conteiner
-    #branding
-      #branding-content
-        .title-content
-          %a{:href => "/", :title => ""}
-            %img.site-logo{:alt => "", :src => "/assets/logo.png"}
-          %h1.site-title
-            %a{:href => "/", :title => ""} Renta
-        .access-content
+  - if flash["date_error"]
+    %script{:type=>"text/javascript"}
+      alert("Dates are invalid");
+  =render :partial => 'general/header'
+  =render :partial => 'general/slider'
+  #main
+    .sidebars-area
+      %aside.sidebar-left
+        .widget
+          .widget-title.special-offers
+            %div
+              %img{:alt => "", :src => "assets/star.png"}
+              Your Latest Orders
+            .clear
+          %table.special-offers-table
+            -@rentals.each do |rental_obj|
+              -if @index%2==0
+                %tr.odd
+                  %th
+                    =rental_obj.location
+                  %td
+                    =rental_obj.pickupdate.strftime("%d/%m/%Y")
+                    = "-"
+                    =rental_obj.dropoffdate.strftime("%d/%m/%Y")
+              -else
+                %tr.even
+                  %th
+                    =rental_obj.location
+                  %td
+                    =rental_obj.pickupdate.strftime("%d/%m/%Y")
+                    = "-"
+                    =rental_obj.dropoffdate.strftime("%d/%m/%Y")
+              -@index += 1
+          .widget-footer You can see your rentals
+        .widget.widget-features
+          %h3.widget-title
+            %img{:alt => "", :src => "assets/lamp.png"}
+            Find Us
+          .clear{:style => "padding-bottom:1px"}
+      .sidebar-middle
+        .widget.main-widget
+          .widget-title
+            %div
+              %img{:alt => "", :src => "assets/latest.png"}
+              Last 3 Added Cars
+            .clear
+          -@cars.each do |car_obj|
+            .post
+              .entry-header
+                %span
+                  =car_obj.title
+              .entry-content
+                %div{:style => "float:left;"}
+                  %img{:width=>"150" , :height => "75",:src=>car_obj.image}
+                %div{:style => "margin-left:30px;float:left;"}
+                  %ul
+                    %li.lastadded
+                      %strong> Make:
+                      =car_obj.make
+                    %li.lastadded
+                      %strong> Model:
+                      =car_obj.model
+                    %li.lastadded
+                      %strong> Year:
+                      =car_obj.year_info
+                    %li.lastadded
+                      %strong> Price:
+                      =car_obj.price
+                      TL / Year
+                .clear
+      %aside.sidebar-right
+        .widget
+          %h3.widget-title
+            %img{:alt => "lamp", :src => "assets/lamp.png"}
+            Social Media
+          .widget-content
+            %a{:href => "http:www.facebook.com"}
+              %img{:alt => "Facebook", :src => "assets/fb-social.png"}
+            %a{:href => "http:www.twitter.com"}
+              %img{:alt => "Twitter", :src => "assets/tw-social.png"}
+            %a{:href => "http:plus.google.com"}
+              %img{:alt => "Google Plus", :src => "assets/gplus-social.png"}
+            %a{:href => "http:www.linkedin.com"}
+              %img{:alt => "Linkedin", :src => "assets/in-social.png"}
+            %a{:href => "http:www.skype.com"}
+              %img{:alt => "Skype", :src => "assets/skype-social.png"}
+        .widget
+          %h3.widget-title
+            %img{:alt => "", :src => "assets/lamp.png"}
+            Car Brands
           %ul
-        .menus-content
-          .member
-            -if session[:user_id]
-              %p{:style => "float:right;margin:10px 5px 0 0;"}
-                %i.fa.fa-user{:style => "padding-right:3px;"}
-                =@welcome_name
-                %br
-                %i.fa.fa-sign-out{:style => "padding-right:3px;"}
-                %a{:href => "logout"} Logout
-            -else
-              %span.sign_in
-                %a.sign_button.tab_link_button{:href => "#sign_in", :title => ""} Sign in
-              %span.register
-                %a.sign_button.tab_link_button{:href => "#register", :title => ""} Register
+            -@index=0
+            -@brands.each do |brand|
+              -if @index%2==0
+                %li.even
+                  %a{:href => "#", :title => ""}
+                    =brand
+              -else
+                %li.odd
+                  %a{:href => "#", :title => ""}
+                    =brand
+              -@index += 1
       .clear
-    #slider
-      #slider-img
-        %ul.slides
-          %li
-            %img{:alt => "Slider 1", :src => "/assets/slider1.jpg"}
-          %li
-            %img{:alt => "Slider 3", :src => "/assets/slider3.jpg"}
-        #slider-pattern
-      #slider-content
-        #slider-post
-          .post
-            .entry-header
-              %h3.entry-format Welcome to Rent A Car
-            .entry-content Start now for rent
-        %form#slider-form.main-form{:action => "choose_car", :method => "post"}
-          %input{name: "authenticity_token", type: "hidden", value: session[:_csrf_token]}
-          .main_form_navigation
-            #manage_reservation.title-form1.current Create A Request
-          #book_car_content.content-form
-            .location-block
-              .form-block.location Location
-              %input.location{:name => "location", :placeholder => "Enter Location", :type => "text", :value => ""}
-            .form-block.pick-up
-              %h4 Pick-up date
-              %input.datepicker{:name => "date_from", :placeholder => "Click and Select Date", :type => "text"}
-            .form-block.drop-off
-              %h4 Drop-off date
-              %input.datepicker{:name => "date_to", :placeholder => "Click and Select Date", :type => "text"}
-            .form-block.form-submit
-              %input.orange_button.form-continue{:type => "submit"}
-          .clear
-    #main
-      .sidebars-area
-        %aside.sidebar-left
-          .widget.widget-features
-            %h3.widget-title
-              %img{:alt => "", :src => "assets/lamp.png"}
-              Find Us
-            .clear{:style => "padding-bottom:1px"}
-            %div{:style => "height:250px;width:299px;"}
-              %iframe{:frameborder => "0", :height => "350", :marginheight => "0", :marginwidth => "0", :scrolling => "no", :src => "http://maps.google.com/maps?f=q&amp;ie=UTF8&amp;ll=51.069017,-114.082031&amp;spn=7.747835,23.24707&amp;z=6&amp;output=embed", :width => "299"}
-        .sidebar-middle
-          .widget.main-widget
-            .widget-title
-              %div
-                %img{:alt => "", :src => "assets/latest.png"}
-                Last 3 Added Cars
-              .clear
-            -@cars.each do |car_obj|
-              .post
-                .entry-header
-                  %span
-                    =car_obj.title
-                .entry-content
-                  %div{:style => "float:left;"}
-                    %img{:width=>"150" , :height => "75",:src=>car_obj.image}
-                  %div{:style => "margin-left:30px;float:left;"}
-                    %ul
-                      %li.lastadded
-                        %strong> Make:
-                        =car_obj.make
-                      %li.lastadded
-                        %strong> Model:
-                        =car_obj.model
-                      %li.lastadded
-                        %strong> Year:
-                        =car_obj.year_info
-                      %li.lastadded
-                        %strong> Price:
-                        =car_obj.price
-                        TL / Year
-                  .clear
-        %aside.sidebar-right
-          .widget
-            %h3.widget-title
-              %img{:alt => "lamp", :src => "assets/lamp.png"}
-              Social Media
-            .widget-content
-              %a{:href => "http:www.facebook.com"}
-                %img{:alt => "Facebook", :src => "assets/fb-social.png"}
-              %a{:href => "http:www.twitter.com"}
-                %img{:alt => "Twitter", :src => "assets/tw-social.png"}
-              %a{:href => "http:plus.google.com"}
-                %img{:alt => "Google Plus", :src => "assets/gplus-social.png"}
-              %a{:href => "http:www.linkedin.com"}
-                %img{:alt => "Linkedin", :src => "assets/in-social.png"}
-              %a{:href => "http:www.skype.com"}
-                %img{:alt => "Skype", :src => "assets/skype-social.png"}
-          .widget
-            %h3.widget-title
-              %img{:alt => "", :src => "assets/lamp.png"}
-              Car Brands
-            %ul
-              -@brands.each do |brand|
-                -if @index%2==0
-                  %li.even
-                    %a{:href => "#", :title => ""}
-                      =brand
-                -else
-                  %li.odd
-                    %a{:href => "#", :title => ""}
-                      =brand
-                -@index += 1
-        .clear
     .clear
-    %footer#footer
-      #footer-menu.footer-content
-        .widget-area
-          .clear
-          .footer-widget-single
-            %h3{:style => "color:#444c57"}
-              %img{:alt => "star", :src => "assets/star.png", :style => "padding-right:6px;"}>
-              Latest News From Our Blog
-            %div{:style => "width:360px;padding-top:5px;"}
-              %ol
-                %li
-                  %a{:href => "http:burakcolak.com.trblog?p=24", :target => "_blank"} Genelia WordPress Theme
-                %li
-                  %a{:href => "http:burakcolak.com.trblog?p=4", :target => "_blank"} MicroPiano
-                %li
-                  %a{:href => "http:burakcolak.com.trblog?p=1", :target => "_blank"} Our blog is created now
-          .recent_tweets.footer-widget-single
-            %h3 Recent tweets
-            .recent_tweets_content
-              %a{:href => "https:www.twitter.comBurak1Colak", :target => "_blank", :title => ""} @Burak1Colak
-              @ensaktas Güzel olmuş , eline sağ
-            .recent_tweets_url
-              %a{:href => "http:www.kilitbilgi.com", :target => "_blank", :title => ""} http:www.kilitbilgi.com
-          .support.footer-widget-single
-            %img{:alt => "", :src => "assets/support-icon.png"}
-            .title
-              Online support
-            .phone
-              0500500505676
-            .email
-              %a{:href => "mailto:sales@example.com", :title => "Contact Us"} sales@example.com
-          .clear
-      #footer-content
-        %img.site-logo{:alt => "", :src => "assets/logo.png"}
-        %h1.site-title Renta
-        .company-name
-          Copyright © 2014 - Developed by Burak &amp; Mali &amp; Serhat
-  #overlay_block
-  .admin-form-content.sign_register_block
-    .admin-form-block
-      .main_form_navigation
-        #tab_register.title-form.back
-          %span.register
-            %a{:href => "#register", :title => ""} Register
-        #tab_sign_in.title-form.current
-          %span.sign_in
-            %a{:href => "#sign_in", :title => ""} Sign In
-      #tab_sign_in_content.content-form
-        %form.main-form.admin-form{:action => "login", :method => "post"}
-          %input{name: "authenticity_token", type: "hidden", value: session[:_csrf_token]}
-            %div
-              %input#sign_in_email.input_placeholder{:maxlength => "30", :name => "email_login", :placeholder => "Email address", :type => "text"}
-            %div
-              %input#sign_in_pass{:maxlength => "40", :name => "password_login", :placeholder => "Password", :type => "password"}
-            %input.admin-form-submit.orange_button{:name => "member[login]", :type => "submit", :value => "Login"}
-            .admin_form_link
-              %span.forgot_passwd
-                %a.tab_link_button{:href => "#forgot_passwd", :title => ""} Forgot password?
-      #tab_register_content.content-form.hidden
-        %form.main-form.admin-form{:action => "register", :method => "post"}
-          %input{name: "authenticity_token", type: "hidden", value: session[:_csrf_token]}
-          %div
-            %input#register_email.input_placeholder{:maxlength => "30", :name => "member[email]", :placeholder => "Email address", :type => "text", :value => ""}
-          %div
-            %input#register_name{:maxlength => "30", :name => "member[fname]", :placeholder => "First Name", :type => "text"}
-          %div
-            %input#register_name{:maxlength => "30", :name => "member[lname]", :placeholder => "Last Name", :type => "text"}
-          .bdate_icon
-            %i.fa_bdate.fa.fa-calendar
-            %input.datepicker{:maxlength => "10", :name => "member[birthdate]", :placeholder => "Birth Date", :type => "text"}
-          .bdate_icon{:style => "float:left;margin:10px 0;"}
-            %i.fa_bdate.fa.fa-phone-square
-            %input{:maxlength => "11", :name => "member[cellphone]", :placeholder => "Cell Phone", :type => "text"}
-          %div
-            %input#sign_in_pass{:maxlenght => "40", :name => "member[password]", :placeholder => "Password", :type => "password"}
-          %input.admin-form-submit.orange_button{:name => "member[register]", :type => "submit", :value => "Register"}
-            .admin_form_link
-              %span.sign_in
-                %a.tab_link_button{:href => "#sign_in", :title => ""} Already registered?
-        .clear
-    .admin-form-content.forgot_passwd_block
-      .admin-form-block
-        %form.main-form.admin-form{:action => root_path, :method => "post"}
-          .main_form_navigation
-            #tab_forgot_passwd.title-form.current Forgot Password?
-          #tab_forgot_passwd_content.content-form
-            %input#forgot_pass_email.input_placeholder{:name => "forgot_pass_email", :placeholder => "Email address", :type => "text", :value => ""}
-            #forgot_pass_text We will send you the password in few minutes.
-            %input.admin-form-submit.orange_button{:name => "forgot_submit", :type => "submit", :value => "Continue"}
-            .admin_form_link
-              %span.sign_in
-                %a.tab_link_button{:href => "#sign_in", :title => ""} Sign In
-          .clear
-  =javascript_include_tag 'application', 'data-turbolinks-track' => true
-  %script $(function(){$(".datepicker").datepicker({ dateFormat:"dd/mm/yy"})});
+  =render :partial => 'general/footer'
