--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,3 +1,11 @@
 !!!
 %html
-  = yield
+  %head
+    %title
+      = get_title
+    %meta{:charset => "utf-8"}
+    %meta{:name => "viewport" , :content => "width=device-width, initial-scale=1"}
+    = stylesheet_link_tag    'general', media: 'all', 'data-turbolinks-track' => true
+    = csrf_meta_tags
+
+  =yield
