--- a/app/views/general/index.html.haml
+++ b/app/views/general/index.html.haml
@@ -14,6 +14,9 @@
   - if flash["date_error"]
     %script{:type=>"text/javascript"}
       alert("Dates are invalid");
+  - if flash["member_complete"]
+    %script{:type=>"text/javascript"}
+      alert("You signed up successfully");
   =render :partial => 'general/header'
   =render :partial => 'general/slider'
   #main
